--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=18.14.0 <19.0.0"
   }
 }
